--- a/vim.md.html
+++ b/vim.md.html
@@ -552,6 +552,21 @@ C-K  | prev place
 <meta name="keywords" content="*memo:vim.coc*">
 ## coc
 
+### g:coc_config_home
+~~~
+~/.vim/coc-settings.json               (local)
+$MY_VIM/coc/win/coc-settings.json      (windows)
+$MY_VIM/coc/linux/coc-settings.json    (linux)
+~~~
+
+### g:coc_data_home
+~~~
+~/.vim/coc_data        (local)
+$MY_VIM/coc_data/win   (windows)
+$MY_VIM/coc_data/linux (linux)
+~/.config/coc          (linux local)
+~~~
+
 ### install
 ~~~
 Plug 'neoclide/coc.nvim', {'branch': 'release'}
