--- a/my.md.html
+++ b/my.md.html
@@ -12,9 +12,9 @@ Ahk
 | .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |            |
 | .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag prev   |            |            | ez_motion  | wbl_open   | [Tab]      | wbl_pop    | half prev  |            |
-| [Ctrl]     | quickhl    | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |            |
-| .          | wrap       | cut_m      | copy_m     | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |            |
+| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag prev   |            |            | qh_cfile   | qh_cword   | [Tab]      | wbl_pop    | half prev  |            |
+| [Ctrl]     | rg_cfile   | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |            |
+| .          | wrap       | cut_m      | copy_m     | [v_block]  | ez_motion  |            |            | half next  | [Enter]    |            |            |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | win next   | win prev   | app prev   | app next   | app tab    |            |            | C-Left     | C-Right    | C-Up       | C-Down     | Esc        |            |
 | .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       |            |            |
