--- a/sh.md.html
+++ b/sh.md.html
@@ -314,11 +314,11 @@ env LC_TIME=C date '+%H:%M:%S'
 <meta name="keywords" content="*memo:sh.zip*">
 <meta name="keywords" content="*memo:sh.unzip*">
 ## zip/unzip
-| Command                    | Description      |
-| ---                        | ---              |
-| zip -r out.zip file/dir... | compress files   |
-| unzip filename.zip         | uncompress files |
-| unzip -l filename.zip      | list files       |
+| Command                       | Description                    |
+| ---                           | ---                            |
+| zip -e -r out.zip file/dir... | compress files with encryption |
+| unzip filename.zip            | uncompress files               |
+| unzip -l filename.zip         | list files                     |
 
 <meta name="keywords" content="*memo:sh.lha*">
 ## lha
