--- a/sh.md.html
+++ b/sh.md.html
@@ -316,6 +316,7 @@ env LC_TIME=C date '+%H:%M:%S'
 ## zip/unzip
 | Command                       | Description                    |
 | ---                           | ---                            |
+| zip -r out.zip file/dir...    | compress files                 |
 | zip -e -r out.zip file/dir... | compress files with encryption |
 | unzip filename.zip            | uncompress files               |
 | unzip -l filename.zip         | list files                     |
